Minor design bugs (panel adjust width visibility, etc) are fixed.

--- a/keshif.less
+++ b/keshif.less
@@ -501,6 +501,7 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
             }
         }
         > .panelAdjustWidth{
+            display: none;
             position: absolute;
             pointer-events: all;
             height: 100%;
@@ -719,7 +720,6 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     .hasLabelWidth{ text-align: right; }
     .attribGroup{
         direction:ltr;
-        margin-right: 2px;
     }
     .attrib{
         // add background to the text area when an item is selected
@@ -2343,7 +2343,7 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
                         margin-right: 2px;
                     }
                     > .content{
-                        display: inline-block;
+                        display: block;
                     }
                     > .itemToggleDetails{
                         display: block;
